cmake_minimum_required(VERSION 3.15)
project(Chapter02)

set(CMAKE_CXX_STANDARD 14)

add_executable(Chapter02 TrueAndFalse.cpp DataTypeBool.cpp Referen.cpp RefArrElem.cpp RefPtr.cpp RefSwap.cpp RefReturnOne.cpp RefReturnTwo.cpp RefReturnThree.cpp MemMalFree.cpp NewDelete.cpp NewObject.cpp StdCPPFunc.cpp)