cmake_minimum_required(VERSION 3.15)
project(Chapter04)

set(CMAKE_CXX_STANDARD 14)

add_executable(Chapter04 RectangleFault.cpp Point.cpp Point.h Rectangle.cpp Rectangle.h RectangleFaultFind.cpp Encaps1.cpp Encaps2.cpp Constructor1.cpp Constructor2.cpp FruitSaleSim2.cpp RectangleConstructor.cpp FruitSaleSim3.cpp ReferenceMember.cpp PrivateConstructor.cpp Destructor.cpp)