cmake_minimum_required(VERSION 3.15)
project(Chapter10)

set(CMAKE_CXX_STANDARD 14)

add_executable(Chapter10 FirstOperationOverloading.cpp OverloadingOperation.cpp GFunctionOverloading.cpp OneOpndOverloading.cpp PostOpndOverloading.cpp PointMultipleOperation.cpp CommuMultipleOperation.cpp ConsoleOutput.cpp IterateConsoleOutput.cpp PointConsoleOutput.cpp)