cmake_minimum_required(VERSION 3.15)
project(Chapter14)

set(CMAKE_CXX_STANDARD 14)

add_executable(Chapter14 PointTemplate.h ArrayTemplate.h BoundArrayMain.cpp PointTemplateFriendFunction.cpp ClassTemplateSpecialization.cpp ClassTemplatePartialSpecialization.cpp NonTypeTemplateParam.cpp TemplateParamDefaultValue.cpp FunctionTemplateStaticVar.cpp ClassTemplateStaticMem.cpp)